# alt-theory

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.md  PUBLIC-CANDIDATE-REVIEW.md  README.md  package-lock.json  package.json  start-v1-alpha-local.cmd  tsconfig.bundle.json
agent-assets/: ALTTHEORY.md  README.md  models.example.json
agent-assets/kb/: CHANGELOG.md
agent-assets/model-presets/: recommended-models.json
agent-assets/profiles/: README.md  default.md
agent-assets/role-presets/: default.md  role-conceptual-theory-companion-20260623-1.md  role-conceptual-theory-companion-20260627-1.md  role-conceptual-theory-companion.md  role-three-mode-minimal-latest.md  role-three-mode-minimal.md
agent-assets/soul/: soul-core-self-20260612-1.md  soul-core-self-20260612-2.md  soul-core-self.md  soul-latest.md  soul-minimal-20260608-1.md
alt-theory-app/core/: agent-assets.ts  alt-theory-core.test.ts  alt-theory-core.ts  backend-v2.test.ts  core-soul.ts  data-dir.ts  kb-metadata.ts  lineage-runtime-feasibility.test.ts  model-fallback.test.ts  model-fallback.ts  security-extension.ts  smoke-resume.ts  test-core.ts  web-access-tools.test.ts  web-access-tools.ts
alt-theory-app/frontend/: DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
alt-theory-app/web-server/: ab-records.test.ts  ab-records.ts  app-settings.test.ts  app-settings.ts  approval-bridge.ts  asset-registry.ts  auth-accounts.ts  (+43 more)
alt-theory-rag/: .gitignore  CODEOWNERS  Dockerfile  LICENSE  README.md  config.yaml  glama.json  install.ps1  pyproject.toml  requirements.txt
alt-theory-rag/.github/: dependabot.yml
alt-theory-rag/.github/workflows/: ci.yml  release.yml  security.yml
alt-theory-rag/documents/: ART-Kaplan-1995-core.md  ART-Kaplan-1995-details.md  aesthetic_and_affective_response-Ulrich-1983-core.md  privacy_regulation_theory_altman_1976_core.md
alt-theory-rag/documents/examples/: sample-document.md
alt-theory-rag/mcp_server/: __init__.py  config.py  ingestion.py  parsers.py  providers.py  server.py
alt-theory-rag/tests/: conftest.py  test_config.py  test_ingestion.py  test_parsers.py  test_providers.py  test_search.py  test_tools.py
development/: README.md
electron/: bundle-server.cjs  main.cjs  preload.cjs
evals/: README.md
project/: README.md
references/: legacy-agent-draft.md
scripts/: build-candidate-c.cjs  check-llm-theo-traces.ps1  compile-bundle.cjs  make-splash.ps1  prep-wincodesign-cache.ps1  probe-a-gpu.ps1  repro-b.ps1  start-alt-theory.bat  test-final.ps1  test-isolation.ps1  test-portable.ps1
(+625 files in other folders)
